# regularizeNd

./: .buildinfo  .buildinfo.bak  .gitattributes  .gitignore  .nojekyll  CHANGELOG.md  Interpolation Examples.xlsx  LICENSE  README.md  changelog.html  developer_guide.html  examples.html  genindex.html  git-conventional-commits.yaml  index.html  linear.m  objects.inv  package-lock.json  package.json  pnpm-lock.yaml  post-clone-script.sh  pyproject.toml  regularizeNd.m  regularizeNdEven.m  search.html  searchindex.js  setupRegularizeNdProjectPath.m  theory_regularizer.html
.doctrees/: changelog.doctree  developer_guide.doctree  environment.pickle  examples.doctree  index.doctree  theory_regularizer.doctree
.githooks/: commit-msg
.github/: Developer Documentation.md  Developer_Documentation.md
Examples/: Data for Constraint and Mapping Example.mat  Iterative Solver Data.mat  Mapping_Example.fig  README.m  README.mlx  START_HERE_example1.m  START_HERE_example1.mlx  constraint_and_Mapping_Example.m  constraint_and_Mapping_Example.mlx  dataset_4d_1.mat  dataset_4d_2.mat  etopo_loihi.mat  example1.m  example1D.m  example1D.mlx  example2.m  exampleIterativeSolver.m  exampleIterativeSolver.mlx  example_4D_input.m  example_scattered_data_near_convex_hull.m  example_solver_differences.m  example_solver_differences.mlx
_sources/: developer_guide.md.txt  theory_regularizer.md.txt
build_base/: GettingStarted.m  info.xml  toolbox.ignore
doc/: GettingStarted.mlx  README.mlx  helptoc.xml  info.xml  lsqConstrainedAlternativeDoc.mlx  monotonicConstraintDoc.mlx  regularizeNdDoc.mlx  regularizeNdMatricesDoc.mlx
docs/: Makefile  conf.py  developer_guide.md  examples.rst  index.rst  make.bat  theory_regularizer.md
(+110 files in other folders)
