[project]
name = "regularizeNd-docs"
version = "3.0.7"
description = "Documentation tooling (Sphinx, MATLAB domain, autobuild) for the regularizeNd project."
license = {text = "MIT"}
requires-python = ">=3.12,<3.13"

# Python dependencies used for documentation
dependencies = [
  "sphinx",
  "sphinxcontrib-matlabdomain",
  "sphinx-autobuild",
  "sphinx-rtd-theme>=3.0.2",
  "myst-parser",
]

[tool.uv]
# Use uv with the existing .venv created via `uv venv`
managed = true
