[project]
name = "regularizeNd"
version = "3.0.8"
description = "Python port and documentation tooling for the regularizeNd project."
license = {text = "MIT"}
requires-python = ">=3.12,<3.13"

# Core dependencies required by the Python port (ports/python/regularize_nd.py)
dependencies = [
  "numpy>=1.25",
  "scipy>=1.11",
]

[dependency-groups]
docs = [
  "sphinx",
  "sphinxcontrib-matlabdomain",
  "sphinx-autobuild",
  "sphinx-rtd-theme>=3.0.2",
  "myst-parser",
]
test = [
  "pytest>=7",
]

[tool.uv]
# Use uv with the existing .venv created via `uv venv`
managed = true

[tool.pytest.ini_options]
testpaths = ["ports/python/tests"]
pythonpath = ["ports/python"]
